// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing addCustomStyles verify css 1`] = `
<div>
  <style />
</div>
`;

exports[`Testing addCustomStyles verify css 2`] = `
<div>
  <style>
    .dropzone {
        fill: transparent;
        stroke: transparent;
    }
    .dropzone:hover{
        fill: red;
        opacity: 25%;
    }
    text {
        user-select: none;
    }
    .copying {
        cursor: copy;
    }
    .moving {
        cursor: move;
    }
    .detail-panel {
        display: flex;
        align-content: center;
        gap: 12px;
    }
  </style>
</div>
`;

exports[`Testing cursorCopy turn off copy cursor 1`] = `
<div
  class="copying"
/>
`;

exports[`Testing cursorCopy turn off copy cursor 2`] = `
<div
  class=""
/>
`;

exports[`Testing cursorCopy turn on and off copy cursor 1`] = `
<div
  class=""
/>
`;

exports[`Testing cursorCopy turn on and off copy cursor 2`] = `
<div
  class=""
/>
`;

exports[`Testing cursorCopy turn on copy cursor 1`] = `<div />`;

exports[`Testing cursorCopy turn on copy cursor 2`] = `
<div
  class="copying"
/>
`;

exports[`Testing cursorMove turn off move cursor 1`] = `
<div
  class="moving"
/>
`;

exports[`Testing cursorMove turn off move cursor 2`] = `
<div
  class=""
/>
`;

exports[`Testing cursorMove turn on and off move cursor 1`] = `
<div
  class=""
/>
`;

exports[`Testing cursorMove turn on and off move cursor 2`] = `
<div
  class=""
/>
`;

exports[`Testing cursorMove turn on move cursor 1`] = `<div />`;

exports[`Testing cursorMove turn on move cursor 2`] = `
<div
  class="moving"
/>
`;
